--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@ footer{background:var(--navy-deep);padding:48px 0}
         <div class="trust-cat-label" lang="en">Strategic Partners</div>
         <div class="trust-cat-label" lang="ko">전략적 파트너</div>
         <div class="trust-logos">
-          <div class="trust-logo" style="flex-direction:column;height:auto;padding:12px 16px"><strong style="color:var(--navy);font-size:13px">INSIGHT3</strong><span style="font-size:9px;color:var(--text-muted);margin-top:2px">Web3 Advisory</span></div>
+          <div class="trust-logo" style="flex-direction:column;height:auto;padding:12px 16px"><strong style="color:var(--navy);font-size:13px">INSIGHT3</strong><span style="font-size:9px;color:var(--text-muted);margin-top:2px">strategic advisory firm specializing in digital assets, tokenization, and Web3 market expansion</span></div>
           <div class="trust-logo" style="flex-direction:column;height:auto;padding:12px 16px"><strong style="color:var(--navy);font-size:13px">TokenPost</strong><span style="font-size:9px;color:var(--text-muted);margin-top:2px">Digital Asset Media</span></div>
         </div>
       </div>
